# splice

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  manual.md
docs/: BATCH_PATCH_SPEC.md  DIAGNOSTICS_HUMAN_LLM.md  DIAGNOSTICS_OUTPUT.md  MAGELLAN_INTEGRATION_PLAN.md  MULTI_LANGUAGE_PLAN.md  PHILOSOPHY.md  PREVIEW_FLAG.md  TODO.md  TODO_MULTI_LANGUAGE.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/graph/: magellan_integration.rs  mod.rs  schema.rs
src/ingest/: cpp.rs  detect.rs  dispatch.rs  java.rs  javascript.rs  magellan.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/ingest/imports/: cpp.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/patch/: backup.rs  batch_loader.rs  mod.rs  pattern.rs
src/plan/: mod.rs
src/resolve/: cross_file.rs  mod.rs  module_resolver.rs
src/resolve/references/: mod.rs  rust.rs
src/symbol/: mod.rs
src/validate/: gates.rs  mod.rs
tests/: cli_tests.rs  cpp_import_tests.rs  cpp_patch_tests.rs  cpp_symbol_tests.rs  cross_file_tests.rs  enhanced_symbol_tests.rs  import_extraction_tests.rs  ingest_tests.rs  integration_refactor.rs  java_import_tests.rs  java_patch_tests.rs  java_symbol_tests.rs  javascript_patch_tests.rs  language_detection_tests.rs  module_path_tests.rs  patch_tests.rs  python_import_tests.rs  python_patch_tests.rs  python_symbol_tests.rs  resolve_tests.rs  typescript_import_tests.rs  typescript_patch_tests.rs  typescript_symbol_tests.rs  validation_gates_tests.rs  validation_tests.rs
