[package]
name = "splice"
version = "0.2.1"
edition = "2021"
description = "Span-safe refactoring kernel for Rust using SQLiteGraph"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/splice"
readme = "README.md"

[lib]
name = "splice"
path = "src/lib.rs"

[dependencies]
sqlitegraph = { version = "0.2.10", features = ["sqlite-backend"] }

# AST parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"

# Safe byte-level text editing
ropey = "1.6"

# Error handling
thiserror = "1.0"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# File hashing for validation
sha2 = "0.10"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
